--- a/libfuse-2.9.9/.gitignore
+++ b/libfuse-2.9.9/.gitignore
@@ -15,17 +15,23 @@
 \#*#
 *.orig
 *~
+Makefile.in
+Makefile
 *.m4
-*.in
-/archivemount.1
-/config.guess
-/config.sub
+stamp-h*
+config.*
 /ltmain.sh
 /configure
 /install-sh
+/mkinstalldirs
 /missing
 /*.cache
 /depcomp
 /compile
+/libtool
+/INSTALL
+/fuse.pc
+/.pc
+/patches
+/m4
 /build
-/jniLibs
